# Thrive

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pre-commit-config.yaml  .rubocop.yml  .runsettings  .stylelintrc.js  .travis.yml  Angmar inquisition.txt  Another test  CIConfiguration.yml  CInterop.cpp  CInterop.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPUHelpers.cs  CreateCIBuildImages.rb  DebugDrawForwarder.hpp  DebugDrawer.cpp  DebugDrawer.hpp  Directory.Build.props  Examples.material  GlobalSuppressions.cs  ImportAssets.rb  It is not in Angmar but it's still fancy.txt  LICENSE.txt  MakeRelease.rb  MicrobeEditor.cs  MicrobeStage.cs  NativeConstants.cs  NativeInterop.cs  NativeLibIntercommunication.hpp  PatchNotes.json  (+50 more)
contrib/lua/: CMakeLists.txt  building.txt  sol.hpp  sol_changes.txt
contrib/ogre_ogg_sound/: .gitignore  CMakeLists.txt  COPYING  ChangeLog.txt  ReleaseNotes.txt
mingw_setup/TinyXML/: CMakeLists.txt  install.ps1
mingw_setup/ogg/: CMakeLists.txt  install.ps1  install.sh
mingw_setup/vorbis/: CMakeLists.txt  install.ps1  install.sh
src/: CMakeLists.txt  Localization.txt  Main.cpp  Main_Res.rc  MembraneWaterRipple.cs  RCa24904  README.txt  ThriveGame.cpp  ThriveGame.h  game.cpp  game.h  main.cpp  main_menu_keypresses.cpp  main_menu_keypresses.h  resource.h  thrive_common.cpp  thrive_common.h  thrive_include.h  thrive_js_interface.cpp  thrive_js_interface.h  thrive_net_handler.cpp  thrive_net_handler.h  thrive_v8_extension.js  thrive_world_factory.cpp  thrive_world_factory.h
src/ascension_stage/: AscensionCeremony.cs  AscensionCeremony.cs.uid  AscensionCeremony.tscn  AscensionCongratulationsPopup.cs  AscensionCongratulationsPopup.tscn  DescendConfirmationDialog.cs  DescendConfirmationDialog.tscn
src/auto-evo/: AutoEvo.cs  AutoEvo.cs.uid  AutoEvoConfiguration.cs  AutoEvoConfiguration.cs.uid  AutoEvoExploringTool.Export.cs  AutoEvoExploringTool.Export.cs.uid  AutoEvoExploringTool.cs  AutoEvoExploringTool.cs.uid  AutoEvoExploringTool.tscn  AutoEvoGlobalCache.cs  AutoEvoGlobalCache.cs.uid  AutoEvoRun.cs  AutoEvoRun.cs.uid  EditorAutoEvoRun.cs  EditorAutoEvoRun.cs.uid  EvolutionaryTree.cs  EvolutionaryTree.cs.uid  EvolutionaryTree.tscn  EvolutionaryTreeNode.cs  EvolutionaryTreeNode.cs.uid  EvolutionaryTreeNode.tscn  ExternalEffect.cs  ExternalEffect.cs.uid  GenerationRecord.cs  IAutoEvoConfiguration.cs  IAutoEvoConfiguration.cs.uid  IRunStep.cs  IRunStep.cs.uid  Miche.cs  Miche.cs.uid  MicheTree.cs  MicheTree.cs.uid  MicheTree.tscn  MicheTreeNode.cs  MicheTreeNode.cs.uid  MicheTreeNode.tscn  MutationLogicFunctions.cs  PredefinedAutoEvoConfiguration.cs  PredefinedAutoEvoConfiguration.cs.uid  RunParameters.cs  (+16 more)
src/awakening_stage/: BaseBuildableStructure.cs  BaseBuildableStructure.cs.uid  CraftingHelpers.cs  CraftingHelpers.cs.uid  CraftingRecipe.cs  CraftingRecipe.cs.uid  Equipment.cs  Equipment.cs.uid  EquipmentCategory.cs  EquipmentCategory.cs.uid  EquipmentDefinition.cs  EquipmentDefinition.cs.uid  EquipmentSlot.cs  EquipmentSlot.cs.uid  EquipmentSlotType.cs  EquipmentSlotType.cs.uid  IAcceptsResourceDeposit.cs  IAcceptsResourceDeposit.cs.uid  IActionProgressSource.cs  IActionProgressSource.cs.uid  IAggregateResourceSource.cs  IAggregateResourceSource.cs.uid  IAvailableRecipes.cs  IAvailableRecipes.cs.uid  ICharacterInventory.cs  ICharacterInventory.cs.uid  IConstructable.cs  IConstructable.cs.uid  IHarvestAction.cs  IHarvestAction.cs.uid  IInteractableEntity.cs  IInteractableEntity.cs.uid  IInventory.cs  IInventory.cs.uid  IInventoryItem.cs  IInventoryItem.cs.uid  IProgressReportableActionSource.cs  IProgressReportableActionSource.cs.uid  IStructureSelectionReceiver.cs  IStructureSelectionReceiver.cs.uid  (+38 more)
src/benchmark/: BenchmarkBase.cs  BenchmarkBase.cs.uid  BenchmarkGUITopPart.tscn  BenchmarkHelpers.cs  BenchmarkHelpers.cs.uid  DummySpawnSystem.cs  DummySpawnSystem.cs.uid
src/bullet/: CMakeLists.txt  bullet_engine.cpp  bullet_engine.h  bullet_lua_bindings.cpp  bullet_lua_bindings.h  bullet_ogre_conversion.h  bullet_to_ogre_system.cpp  bullet_to_ogre_system.h  collision_filter.cpp  collision_filter.h  collision_shape.cpp  collision_shape.h  collision_system.cpp  collision_system.h  debug_drawing.cpp  debug_drawing.h  movement.cpp  movement.h  on_collision.cpp  on_collision.h  physical_world.cpp  physical_world.h  rigidBody_bindings.cpp  rigidBody_bindings.h  rigid_body_bindings.cpp  rigid_body_bindings.h  rigid_body_system.cpp  rigid_body_system.h  script_bindings.cpp  script_bindings.h  updatePhysics_system.cpp  updatePhysics_system.h  update_physics_system.cpp  update_physics_system.h
src/common/: CMakeLists.txt  bullet_to_ogre_system.cpp  movement.cpp  movement.h  physics_transform.cpp  physics_transform.h  transform.cpp  transform.h
src/early_multicellular_stage/: CellBillboard.cs  CellBillboard.tscn  CellLayout.cs  CellTemplate.cs  CellType.cs  EarlyMulticellularSpecies.cs  IPositionedCell.cs  Microbe.Multicellular.cs  MulticellularSpawnState.cs
src/engine/: AutoModLoader.cs  CMakeLists.txt  CheatManager.cs  CheatManager.cs.uid  CheatManagerState.cs  CheatManagerState.cs.uid  CheatMenu.cs  ChildObjectCache.cs  ChildObjectCache.cs.uid  ChromaticFilter.cs  ChromaticFilter.cs.uid  ChromaticFilter.tscn  CollisionObjectHelpers.cs  ColourblindScreenFilter.cs  ColourblindScreenFilter.cs.uid  ColourblindScreenFilter.tscn  CommandAttribute.cs  CommandAttribute.cs.uid  CommandContext.cs  CommandRegistry.cs  (+224 more)
test/: .runsettings-ci  CMakeLists.txt  MetaballTest.cs  MetaballTest.cs.uid  MetaballTest.tscn  OrganelleLightTest.tscn  PhysicsTest.cs  PhysicsTest.cs.uid  PhysicsTest.tscn  WindowReorderingSupportTest.cs  WindowReorderingSupportTest.cs.uid  WindowReorderingSupportTest.tscn  engine.cpp  entity.cpp  entity_filter.cpp  rng.cpp  rolling_grid.cpp  script_bindings.cpp  script_compile.cpp  serialization.cpp  sky_system.cpp  test_clouds.cpp  test_component.h  test_main.cpp  test_script_compile.cpp  test_simulation_parameters.cpp  test_thrive_game.h
(+7762 files in other folders)
